Change history
**************

1.0rc2 (unreleased)
-------------------

- Nothing changed yet.


1.0rc1 (2012-06-26)
-------------------

- There are now three states: Pending, Approved, Disapproved. You can this
  way show all pending users. You can only approve or disapprove users, you
  can not make them pending once they have been approved or disapproved.
  
- Having an approval link in the tabs confused the users, so I removed it.

- Added a "Disapprove & Delete" button at the request from users.


1.0b1 (2012-05-31)
------------------

- Fixed the tests. [regebro]


1.0a1 (2012-05-29)
------------------

- Initial release