@@ -1,11 +1,14 @@
 <configure
     xmlns="http://namespaces.zope.org/zope"
     xmlns:five="http://namespaces.zope.org/five"
+    xmlns:cmf="http://namespaces.zope.org/cmf"
     xmlns:i18n="http://namespaces.zope.org/i18n"
     xmlns:genericsetup="http://namespaces.zope.org/genericsetup"
     i18n_domain="collective.memberapproval">
 
   <five:registerPackage package="." initialize=".initialize" />
+
+  <cmf:registerDirectory name="collective.memberapproval"/>
 
   <include package="pas.plugins.memberapproval" />
   <include package=".browser" />
