@@ -1,0 +1,8 @@
+<?xml version="1.0"?>
+<object name="portal_skins">
+ <object name="collective.memberapproval" meta_type="Filesystem Directory View"
+    directory="collective.memberapproval:skins/collective.memberapproval"/>
+ <skin-path name="*">
+  <layer name="collective.memberapproval" insert-after="custom"/>
+ </skin-path>
+</object>
