@@ -1,0 +1,40 @@
+
+<tal:root define="lt string:&lt;;gt string:&gt;;
+                  dummy python:request.RESPONSE.setHeader('Content-Type', 'text/plain;; charset=%s' % here.plone_utils.getSiteEncoding());
+                  member python:options['member'];
+                  portal_properties context/@@plone_tools/properties;
+                  view context/@@passwordreset_view;
+                  reset python:options.get('reset', None) or here.portal_password_reset.requestReset(member.getId())"
+>From: <span tal:replace="structure view/encoded_mail_sender" />
+To: <span tal:replace="python:member.getProperty('email')" />
+Subject: <span tal:replace="view/registered_notify_subject" />
+Precedence: bulk
+
+<div i18n:domain="passwordresettool"
+     i18n:translate="mailtemplate_registered_user_body"
+     tal:omit-tag=""
+     tal:define="fullname python:member.getProperty('fullname')">
+    Welcome <span i18n:name="fullname" tal:replace="fullname" />,
+	
+    your user account has been created.
+	Your username is <span i18n:name="member" tal:replace="member" />. 
+	Please activate it by visiting
+
+    <span i18n:name="set_password" tal:replace="python:here.pwreset_constructURL(reset['randomstring'])+'?userid='+member.getUserName()" />
+
+    Please activate your account before <span i18n:name="expirationdate" tal:replace="python:
+    context.toLocalizedTime(reset['expires'], long_format=1)" />
+    
+    Note that your account also needs to be approved before you can log in.
+    You can activate the account with the above link before  or after it is approved.
+
+</div>
+
+<div i18n:domain="passwordresettool"
+     i18n:translate="greetings"
+     tal:omit-tag="">
+    With kind regards,
+</div>
+--
+<span tal:replace="python:here.email_from_name" />
+</tal:root>
