@@ -4,7 +4,9 @@ Change history
 1.0rc2 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- Added a new registered_notify_template that includes information
+  that the registration needs to be approved before you can
+  sign in.
 
 
 1.0rc1 (2012-06-26)
@@ -17,6 +19,8 @@ Change history
 - Having an approval link in the tabs confused the users, so I removed it.
 
 - Added a "Disapprove & Delete" button at the request from users.
+
+- Changed @@user_approved to @@user_approved for consistency.
 
 
 1.0b1 (2012-05-31)
